--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GoIt-js-hw-11</title>
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <form class="form">
       <input type="text" name="request" placeholder="Search images..." />
-      <button type="submit" class="request-btn"></button>
+      <button type="submit" class="request-btn">Search</button>
     </form>
+    <div id="loading">Loading images, please wait...</div>
     <ul class="gallery"></ul>
 
     <script type="module" src="./main.js"></script>
